# Dual-Robot-Manipulation-Sandbox-A-Goal-Conditioned-Platform-for-Imitation-and-Reinforcement-Learning

./: .gitignore  GAIL.py  README.md  WGCSL.py  get_expert_data_pick_place.py  get_expert_data_reach.py  inference_wgcsl.py  pick_place_env.py  reach_env.py  requirements.txt  tain_WGCSL.py  technical_report_cheng_yin.md  test.py  train_GAIL.py  train_ppo.py  ur5_robotiq.py  utilize.py
Dual_robot_real/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Dual_robot_real/devel/include/dual_robot_rl/: RLExperimentInfo.h
Dual_robot_real/devel/include/move_demo/: GripperControl.h  GripperControlRequest.h  GripperControlResponse.h  SetJointAngles.h  SetJointAnglesRequest.h  SetJointAnglesResponse.h
Dual_robot_real/devel/include/robotiq_3f_gripper_control/: Robotiq3FGripperConfig.h
Dual_robot_real/devel/lib/dual_robot_rl/: common.py  ur5_goal_env.py
Dual_robot_real/devel/lib/gazebo_grasp_plugin_ros/: grasp_event_republisher
Dual_robot_real/devel/lib/gazebo_state_plugins/: gazebo_request_object_info
Dual_robot_real/src/dual_description/: CMakeLists.txt  package.xml
Dual_robot_real/src/dual_gazebo/: CMakeLists.txt  package.xml
Dual_robot_real/src/dual_robot_rl/: CMakeLists.txt
Dual_robot_real/src/dual_robot_rl/config/real/: task_space_pick_and_place_real.yaml
Dual_robot_real/src/dual_robot_rl/config/simulation/: task_space_pick_and_place.yaml
Dual_robot_real/src/dual_robot_rl/scripts/: init_all.py  robot_gazebo_env_goal.py  test.py  test_torch.py  train.py  train_ppo.py  train_real.py  ur5_task_space_pick_and_place_real.py
Dual_robot_real/src/dual_robot_rl/scripts/controller_py/: arm.py  controllers.py  conversions.py  gripper.py  transformations.py  utils.py
Dual_robot_real/src/dual_robot_rl/scripts/gazebo_py/: basic_models.py  body_desk.py  cube.py  gazebo_spawner.py  model.py  spawner.py
Dual_robot_real/src/dual_robot_rl/scripts/rl_method/: ppo.py
Dual_robot_real/src/dual_robot_rl/scripts/ur_pykdl/: kdl_kinematics.py  ur_pykdl.py
Dual_robot_real/src/dual_robot_rl/scripts/utils/: common.py  controllers_connection.py  cost_utils.py  gazebo_connection.py  robot_env_utils.py
Dual_robot_real/src/dual_ur5e_driver/: CMakeLists.txt
Dual_robot_real/src/lib/ur_kinematics/: CMakeLists.txt  ur_moveit_plugins.xml
Dual_robot_real/src/move_demo/: CMakeLists.txt
Dual_robot_real/src/real_robot/: CMakeLists.txt
Dual_robot_real/src/real_robot/data_demo/: 1.py  2.py  3.py  4.py  5.py
Dual_robot_real/src/real_robot/scripts/: camera_test.py  eval.py  gen_demo.py  gen_demo1.py  gen_video.py  gripper_2f.py  multistep_wrapper.py  obs_gen_action.py  real_door_runner.py  real_robot.py  real_robot_right.py  setup.py  test.py  test_demo_action.py  vision_camera.py  vision_data_collection.py
Dual_robot_real/src/real_robot/scripts/utils/: constants.py  conversions.py  real_arm.py  real_controllers.py  spalg.py  utils.py
Dual_robot_real/src/real_robot/scripts/utils/ur_pykdl/: __init.py  hrl_geom_pose_converter.py  kdl_kinematics.py  ur_pykdl.py
Dual_robot_real/src/visual_realsense/: CMakeLists.txt
Dual_robot_real/src/visual_realsense/scripts/: get_image.py
Dual_robot_real/src/visual_realsense/scripts/D435i/: detect distance.py  main_pc.py  realsensePointCloud.py  realsense_depth.py  utils.py
assets/urdf/: dual_robot.urdf  test.urdf
doc/: Dual Robot Manipulation Sandbox: A Goal-Conditioned Platform for Imitation and Reinforcement Learning.tex
imitation_learning/: GAIL.py  WGAN.py  WGCSL.py  inference_wgcsl.py  tain_WGCSL.py  train_GAIL.py  train_WGAN.py
reinforcement_learning/: DDPG_her.py  inference_ddpg.py  inference_sac.py  ppo.py  sac_her.py  train_ddpg.py  train_ppo.py  train_sac.py
(+236 files in other folders)
